Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17653

rhel9.3 crash in sanity-sec 48a, folio-related

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Lustre 2.16.0
    • None
    • 3
    • 9223372036854775807

      Trying to bring up rhel9.3 hit this crash in sanity-sec tedt 48a (encrypted file access)

      [ 7970.433226] page:ffffea0001c83140 refcount:2 mapcount:0 mapping:0000000000000000 index:0x0 pfn:0x720c5
      [ 7970.433242] memcg:ffff88810fcbc000
      [ 7970.433245] flags: 0xfffffc0000000(node=0|zone=1|lastcpupid=0x1fffff)
      [ 7970.433255] raw: 000fffffc0000000 0000000000000000 dead000000000122 0000000000000000
      [ 7970.433259] raw: 0000000000000000 0000000000000000 00000002ffffffff ffff88810fcbc000
      [ 7970.433261] page dumped because: VM_BUG_ON_FOLIO(!folio_test_locked(folio))
      [ 7970.433322] ------------[ cut here ]------------
      [ 7970.433325] kernel BUG at mm/filemap.c:1526!
      [ 7970.433339] invalid opcode: 0000 [#1] PREEMPT SMP DEBUG_PAGEALLOC KASAN
      [ 7970.441023] CPU: 1 PID: 89731 Comm: truncate Kdump: loaded Tainted: G        W  OE     -------  ---  5.14.0rocky93-debug #4
      [ 7970.442409] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS 1.16.3-1.fc39 04/01/2014
      [ 7970.443549] RIP: 0010:folio_unlock+0x62/0x70
      [ 7970.444112] Code: 89 ef e8 c1 46 1f 00 f0 80 65 00 fe 78 02 5d c3 48 89 ef 31 f6 5d e9 9d f7 ff ff 48 c7 c6 60 51 bb a3 48 89 ef e8 ae e6 0b 00 <0f> 0b 48 89 ef e8 94 43 1f 00 eb bc 66 90 0f 1f 44 00 00 48 b8 00
      [ 7970.446394] RSP: 0018:ffffc9000923f950 EFLAGS: 00010282
      [ 7970.447054] RAX: 000000000000003f RBX: ffff888109449080 RCX: 0000000000000000
      [ 7970.447965] RDX: 0000000000000001 RSI: 0000000000000004 RDI: fffff52001247f1a
      [ 7970.448855] RBP: ffffea0001c83140 R08: 000000000000003f R09: ffff888118befd2b
      [ 7970.449740] R10: ffffed102317dfa5 R11: 0000000000000001 R12: ffff888109448f90
      [ 7970.450687] R13: ffff888109448f30 R14: ffffea0001c83140 R15: ffffea0001c83148
      [ 7970.451576] FS:  00007f47bb589740(0000) GS:ffff888118a00000(0000) knlGS:0000000000000000
      [ 7970.452622] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      [ 7970.453532] CR2: 00007f47bb39f425 CR3: 0000000112941006 CR4: 0000000000170ee0
      [ 7970.454485] Call Trace:
      [ 7970.454837]  <TASK>
      [ 7970.455137]  ? show_trace_log_lvl+0x1c4/0x2db
      [ 7970.455734]  ? show_trace_log_lvl+0x1c4/0x2db
      [ 7970.456324]  ? ll_io_zero_page+0x800/0x1650 [lustre]
      [ 7970.457088]  ? __die_body.cold+0x8/0xd
      [ 7970.457591]  ? die+0x2b/0x50
      [ 7970.457998]  ? do_trap+0x1b7/0x2b0
      [ 7970.458471]  ? folio_unlock+0x62/0x70
      [ 7970.458945]  ? do_error_trap+0xba/0x160
      [ 7970.459457]  ? folio_unlock+0x62/0x70
      [ 7970.459960]  ? folio_unlock+0x62/0x70
      [ 7970.460480]  ? handle_invalid_op+0x2c/0x30
      [ 7970.461020]  ? folio_unlock+0x62/0x70
      [ 7970.461489]  ? exc_invalid_op+0x2b/0x40
      [ 7970.462033]  ? asm_exc_invalid_op+0x16/0x20
      [ 7970.462568]  ? folio_unlock+0x62/0x70
      [ 7970.463071]  ll_io_zero_page+0x800/0x1650 [lustre]
      [ 7970.463809]  ? ll_dir_default_lmv_inherit.isra.0+0x1370/0x1370 [lustre]
      [ 7970.464777]  ? trace_kmalloc+0x38/0x100
      [ 7970.465271]  ? kmem_cache_alloc_trace+0x221/0x430
      [ 7970.465948]  ll_setattr_raw+0x1f64/0x3e20 [lustre]
      [ 7970.466808]  ? ll_md_setattr+0x1750/0x1750 [lustre]
      [ 7970.467522]  ? inode_has_perm+0xac/0x1f0
      [ 7970.468115]  ? setup_file_encryption_key+0x400/0x400 [libcfs]
      [ 7970.468977]  ? selinux_inode_setattr+0x196/0x270
      [ 7970.469612]  ? ktime_get_coarse_real_ts64+0x128/0x160
      [ 7970.470368]  ? selinux_mount+0x320/0x320
      [ 7970.470974]  ? setattr_prepare+0xe5/0x680
      [ 7970.471552]  ? projid_m_show+0x220/0x220
      [ 7970.472119]  ? file_remove_privs+0x10/0x10
      [ 7970.472745]  notify_change+0x7b5/0xd40
      [ 7970.473300]  ? do_truncate+0xf0/0x1a0
      [ 7970.473867]  do_truncate+0xf0/0x1a0
      [ 7970.474465]  ? file_open_root+0x210/0x210
      [ 7970.475110]  ? __inode_security_revalidate+0xd0/0xd0
      [ 7970.475833]  vfs_truncate+0x309/0x410
      [ 7970.476277]  do_sys_truncate.part.0+0xdf/0x100
      [ 7970.476870]  ? vfs_truncate+0x410/0x410
      [ 7970.477422]  ? rcu_read_lock_sched_held+0x12/0x70
      [ 7970.478086]  ? syscall_enter_from_user_mode+0x1d/0xb0
      [ 7970.478772]  ? trace_hardirqs_on+0x2d/0x160
      [ 7970.479368]  do_syscall_64+0x56/0x80
      [ 7970.479881]  ? do_user_addr_fault+0x367/0xde0
      [ 7970.480486]  ? rcu_read_lock_sched_held+0x12/0x70
      [ 7970.481159]  ? rcu_read_lock_sched_held+0x12/0x70
      [ 7970.481821]  ? irqentry_exit_to_user_mode+0xa/0x40
      [ 7970.482488]  ? trace_hardirqs_on_prepare+0xb5/0x210
      [ 7970.483164]  entry_SYSCALL_64_after_hwframe+0x46/0xb0
      [ 7970.483845] RIP: 0033:0x7f47bb3466bb
      [ 7970.484416] Code: 48 8b 54 24 28 64 48 2b 14 25 28 00 00 00 75 05 48 83 c4 38 c3 e8 f5 6e 01 00 0f 1f 44 00 00 f3 0f 1e fa b8 4c 00 00 00 0f 05 <48> 3d 00 f0 ff ff 77 05 c3 0f 1f 40 00 48 8b 15 31 37 0b 00 f7 d8
      [ 7970.486758] RSP: 002b:00007fff389ff258 EFLAGS: 00000202 ORIG_RAX: 000000000000004c
      [ 7970.487655] RAX: ffffffffffffffda RBX: 0000000000000800 RCX: 00007f47bb3466bb
      [ 7970.488513] RDX: 0000000000000000 RSI: 0000000000000800 RDI: 00007fff38a0107b
      [ 7970.489446] RBP: 0000000000000003 R08: 0000000000000800 R09: 0000000000000000
      [ 7970.490528] R10: 00007f47bb212528 R11: 0000000000000202 R12: 00007fff38a0107b
      [ 7970.491410] R13: 0000000000401090 R14: 0000000000403de8 R15: 00007f47bb5d3000
      [ 7970.492283]  </TASK>

            stancheff Shaun Tancheff
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: